--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,3 +10,11 @@
 @import "components/header";
 @import "components/footer";
 
+.template__block {
+
+        min-width: 100vw;
+        min-height: 100vh;
+        background-color: rgb(226, 38, 38);
+    
+}
+
